--- a/src/pages/Home/home.scoped.scss
+++ b/src/pages/Home/home.scoped.scss
@@ -1,8 +1,10 @@
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #eceeef;
+  background-color: #DDE2E9;
   border-radius: 0.3rem;
+  height: 80px;
+  max-height: 80px;
 }
 @media (min-width: 576px) {
   .jumbotron {
