--- a/src/components/Input/input.scoped.scss
+++ b/src/components/Input/input.scoped.scss
@@ -1,7 +1,7 @@
 input[type="text"] {
     width: 100%;
     border: 0px solid #aaa;
-    border-radius: 4px;
+    border-radius: .3rem;
     margin: 8px 0;
     outline: none;
     padding: 18px;
