--- a/src/components/Modal/photomodal.scoped.scss
+++ b/src/components/Modal/photomodal.scoped.scss
@@ -1,28 +1,29 @@
 
 #img01 {
-  border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
   width: 100%;
   height: 500px;
   object-fit: cover;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 #img01:hover {opacity: 0.7;}
 
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none; 
+  position: fixed; 
+  z-index: 1;
+  padding-top: 100px; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.9); 
 }
 
 /* Modal Content (image) */
@@ -34,21 +35,10 @@
   background-color: transparent;
 }
 
-/* Caption of Modal Image */
-#caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #000;
-  background-color: white;
-  padding: 10px 0;
-  height: 150px;
-}
+
 
 /* Add Animation */
-.myModal,.modal-content, .main-content {  
+.myModal, .main-content {  
   -webkit-animation-name: zoom;
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
@@ -96,9 +86,20 @@
   display: block;
   width: 80%;
   max-width: 700px;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 h3{
   margin: 0;
   padding: 0;
+}
+
+.bottom-content{
+  padding: 2rem 2rem 2rem;
+}
+.bottom-content h4{
+  color: #bcbdbe;
 }
