--- a/src/components/Label/searchlabel.scoped.scss
+++ b/src/components/Label/searchlabel.scoped.scss
@@ -1,8 +1,9 @@
-.search-label{
-    color: #6E7B92;
-    font-size: 2.5rem;
+.search-label {
+  color: #253858;
+  font-size: 2.5rem;
 }
-.search-label-value{
-    color: #6D7B91;
-    font-size: 2.5rem;
+.search-label-value {
+  color: #6d7b91;
+  font-size: 2.5rem;
 }
+
