--- a/src/components/Modal/photomodal.scoped.scss
+++ b/src/components/Modal/photomodal.scoped.scss
@@ -3,6 +3,8 @@
   cursor: pointer;
   transition: 0.3s;
   width: 100%;
+  margin-bottom: 1.5rem;
+  // height: auto;
   height: 500px;
   object-fit: cover;
   border-top-left-radius: 1rem;
@@ -11,7 +13,6 @@
 
 #img01:hover {opacity: 0.7;}
 
-/* The Modal (background) */
 .modal {
   display: none; 
   position: fixed; 
@@ -31,7 +32,7 @@
   margin: auto;
   display: block;
   width: 80%;
-  max-width: 700px;
+  max-width: 800px;
   background-color: transparent;
 }
 
@@ -85,16 +86,19 @@
   margin: auto;
   display: block;
   width: 80%;
-  max-width: 700px;
+  max-width: 800px;
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+  max-height: calc(100vh - 200px);
+    overflow-y: auto;
 }
 
-h3{
+.bottom-content h3{
   margin: 0;
   padding: 0;
+  color: #253858;
 }
 
 .bottom-content{
@@ -103,3 +107,40 @@ h3{
 .bottom-content h4{
   color: #bcbdbe;
 }
+
+[class*="col-"] {
+  float: left;
+  // padding: 15px;
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
+
+@media only screen and (min-width: 768px) {
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
