--- a/src/components/Modal/photomodal.scoped.scss
+++ b/src/components/Modal/photomodal.scoped.scss
@@ -16,7 +16,7 @@
 .modal {
   display: none; 
   position: fixed; 
-  z-index: 1;
+  z-index: 99;
   padding-top: 100px; 
   left: 0;
   top: 0;
@@ -24,7 +24,7 @@
   height: 100%; 
   overflow: auto; 
   background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.9); 
+  background-color: #000000ad;
 }
 
 /* Modal Content (image) */
@@ -59,17 +59,20 @@
 /* The Close Button */
 .close {
   position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
+  // top: 15px;
+  // right: 35px;
+  top: 58px;
+  right: 0;
+  left: 1208px;
+  color: #F7F7F7;
   font-size: 40px;
-  font-weight: bold;
+  font-weight: normal;
   transition: 0.3s;
 }
 
 .close:hover,
 .close:focus {
-  color: #bbb;
+  color: #F7F7F7;
   text-decoration: none;
   cursor: pointer;
 }
@@ -78,6 +81,20 @@
 @media only screen and (max-width: 700px){
   .modal-content {
     width: 100%;
+  }
+  .close {
+    left: auto;
+    right: 0;
+  }
+}
+
+@media only screen and (min-width: 1514px){
+  .modal-content {
+    width: 100%;
+  }
+  .close {
+    left: auto;
+    right: 230px;
   }
 }
 
@@ -110,37 +127,15 @@
 
 [class*="col-"] {
   float: left;
-  // padding: 15px;
   width: 100%;
 }
 
 @media only screen and (min-width: 600px) {
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
   .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
+
 }
 
 @media only screen and (min-width: 768px) {
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
+ .col-6 {width: 50%;}
 }
 
