--- a/src/pages/Home/home.scoped.scss
+++ b/src/pages/Home/home.scoped.scss
@@ -19,3 +19,11 @@
   padding-left: 0;
   border-radius: 0;
 }
+
+@media only screen and (max-width: 700px){
+  .jumbotron {
+    height: 110px;
+    max-height: 110px;
+  }
+
+}
